--- a/LimenawebApp/Views/Shared/Scripts_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_landingpage.cshtml
@@ -13,3 +13,22 @@
 
 <!--select2-->
 <script src="~/Content/appcontent/assets/vendor/select2/js/select2.full.js"></script>
+<script src="~/Content/appcontent/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Bootstrap -->
+<script src="~/Content/videos/popper.min.js"></script>
+
+<!-- ajax page -->
+<script src="~/Content/videos/pjax.min.js"></script>
+<script src="~/Content/videos/ajax.js"></script>
+<!-- lazyload plugin -->
+<script src="~/Content/videos/lazyload.config.js"></script>
+<script src="~/Content/videos/lazyload.js"></script>
+<script src="~/Content/videos/plugin.js"></script>
+<!-- scrollreveal -->
+<script src="~/Content/videos/scrollreveal.min.js"></script>
+<!-- feathericon -->
+
+<!-- theme -->
+<script src="~/Content/videos/theme.js"></script>
+<script src="~/Content/videos/utils.js"></script>
+
