--- a/LimenawebApp/Views/Shared/main_sidebar.cshtml
+++ b/LimenawebApp/Views/Shared/main_sidebar.cshtml
@@ -16,310 +16,26 @@
             <!-- /menu header -->
             <!-- Menu Item -->
             <li class="dt-side-nav__item">
-                <a href="index.html" class="dt-side-nav__link" title="Dashboard">
+                <a href="@Url.Action("Dashboard_Inventory", "Main")" class="dt-side-nav__link" title="Dashboard">
                     <i class="icon icon-dashboard3 icon-fw icon-lg"></i>
                     <span class="dt-side-nav__text">Dashboard</span>
                 </a>
             </li>
-            <li class="dt-side-nav__item">
-                <a href="layouts.html" class="dt-side-nav__link" title="Layouts">
-                    <i class="icon icon-layout icon-fw icon-lg"></i>
-                    <span class="dt-side-nav__text">Layouts</span>
-                </a>
-            </li>
+
             <!-- /menu item -->
             <!-- Menu Header -->
             <li class="dt-side-nav__item dt-side-nav__header">
-                <span class="dt-side-nav__text">Listing</span>
+                <span class="dt-side-nav__text">Inventory</span>
             </li>
             <!-- /menu header -->
-            <!-- Menu Item -->
+
             <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="For Sale">
-                    <i class="icon icon-tag-o icon-fw icon-lg"></i> <span class="dt-side-nav__text">For Sale</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=sale-nearby" class="dt-side-nav__link" title="Nearby">
-                            <i class="icon icon-pin icon-fw icon-lg"></i> <span class="dt-side-nav__text">Nearby</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=sale-filter" class="dt-side-nav__link" title="Filter">
-                            <i class="icon icon-filter-o icon-fw icon-lg"></i> <span class="dt-side-nav__text">Filter</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="For Rent">
-                    <i class="icon icon-tag-o icon-fw icon-lg"></i> <span class="dt-side-nav__text">For Rent</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=rent-nearby" class="dt-side-nav__link" title="Nearby">
-                            <i class="icon icon-location icon-fw icon-lg"></i> <span class="dt-side-nav__text">Nearby</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=rent-filter" class="dt-side-nav__link" title="Filter">
-                            <i class="icon icon-filter icon-fw icon-lg"></i> <span class="dt-side-nav__text">Filter</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <!-- /menu item -->
-            <!-- Menu Header -->
-            <li class="dt-side-nav__item dt-side-nav__header">
-                <span class="dt-side-nav__text">Components</span>
-            </li>
-            <!-- /menu header -->
-            <!-- Menu Item -->
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="Data & Analytics">
-                    <i class="icon icon-datatable icon-fw icon-lg"></i>
-                    <span class="dt-side-nav__text">Data &amp; Analytics</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=affiliate-marketing" class="dt-side-nav__link"
-                           title="Affiliate Marketing">
-                            <i class="icon icon-refer icon-fw icon-lg"></i> <span class="dt-side-nav__text">Affiliate Marketing</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=traffic" class="dt-side-nav__link" title="Traffic">
-                            <i class="icon icon-traffic icon-fw icon-lg"></i> <span class="dt-side-nav__text">Traffic</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=discount-offers" class="dt-side-nav__link" title="Discount & Offers">
-                            <i class="icon icon-tag-o icon-fw icon-lg"></i>
-                            <span class="dt-side-nav__text">Discount &amp; Offers</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=real-estate" class="dt-side-nav__link" title="Real Estate">
-                            <i class="icon icon-company icon-fw icon-lg"></i> <span class="dt-side-nav__text">Real Estate</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=jewellery" class="dt-side-nav__link" title="Jewellery">
-                            <i class="icon icon-diamond icon-fw icon-lg"></i> <span class="dt-side-nav__text">Jewellery</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=analytics" class="dt-side-nav__link" title="Analytics">
-                            <i class="icon icon-chart-radar icon-fw icon-lg"></i> <span class="dt-side-nav__text">Analytics</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=customer-support" class="dt-side-nav__link" title="Customer Support">
-                            <i class="icon icon-queries icon-fw icon-lg"></i> <span class="dt-side-nav__text">Customer Support</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="eCommerce">
-                    <i class="icon icon-orders-new icon-fw icon-lg"></i> <span class="dt-side-nav__text">eCommerce</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=shopping" class="dt-side-nav__link" title="Shopping">
-                            <i class="icon icon-shopping-cart icon-fw icon-lg"></i> <span class="dt-side-nav__text">Shopping</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=wallet" class="dt-side-nav__link" title="e-Wallet">
-                            <i class="icon icon-revenue icon-fw icon-lg"></i> <span class="dt-side-nav__text">e-Wallet</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=electronics" class="dt-side-nav__link" title="Electronics">
-                            <i class="icon icon-desktop icon-fw icon-lg"></i> <span class="dt-side-nav__text">Electronics</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=my-cart" class="dt-side-nav__link" title="My Cart">
-                            <i class="icon icon-orders-new icon-fw icon-lg"></i> <span class="dt-side-nav__text">My Cart</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=billing" class="dt-side-nav__link" title="Billing">
-                            <i class="icon icon-invoice-new icon-fw icon-lg"></i> <span class="dt-side-nav__text">Billing</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=crypto-currency" class="dt-side-nav__link" title="Crypto Currency">
-                            <i class="icon icon-crypto icon-fw icon-lg"></i> <span class="dt-side-nav__text">Crypto Currency</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="Misc">
-                    <i class="icon icon-icons icon-fw icon-lg"></i> <span class="dt-side-nav__text">Misc</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=gallery" class="dt-side-nav__link" title="Gallery">
-                            <i class="icon icon-camera icon-fw icon-lg"></i> <span class="dt-side-nav__text">Gallery</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=restaurants" class="dt-side-nav__link" title="Restaurants">
-                            <i class="icon icon-burger icon-fw icon-lg"></i> <span class="dt-side-nav__text">Restaurants</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=insurance-plan" class="dt-side-nav__link" title="Insurance Plans">
-                            <i class="icon icon-family icon-fw icon-lg"></i> <span class="dt-side-nav__text">Insurance Plans</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=announcements" class="dt-side-nav__link" title="Announcements">
-                            <i class="icon icon-megaphone icon-fw icon-lg"></i> <span class="dt-side-nav__text">Announcements</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=dropbox" class="dt-side-nav__link" title="Dropbox">
-                            <i class="icon icon-metrics icon-fw icon-lg"></i> <span class="dt-side-nav__text">Dropbox</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=locations" class="dt-side-nav__link" title="Locations">
-                            <i class="icon icon-maps icon-fw icon-lg"></i> <span class="dt-side-nav__text">Locations</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=courses" class="dt-side-nav__link" title="Courses">
-                            <i class="icon icon-courses icon-fw icon-lg"></i> <span class="dt-side-nav__text">Courses</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <!-- /menu item -->
-            <!-- Menu Header -->
-            <li class="dt-side-nav__item dt-side-nav__header">
-                <span class="dt-side-nav__text">Find Realtors</span>
-            </li>
-            <!-- /menu header -->
-            <!-- Menu Item -->
-            <li class="dt-side-nav__item">
-                <a href="page-blank.html?menu=search" class="dt-side-nav__link" title="Search">
-                    <i class="icon icon-search icon-fw icon-lg"></i>
-                    <span class="dt-side-nav__text">Search</span>
+                <a href="@Url.Action("Projects", "Inventory")" class="dt-side-nav__link" title="Search">
+                    <i class="icon icon-tag-o icon-fw icon-lg"></i>
+                    <span class="dt-side-nav__text">Projects</span>
                 </a>
             </li>
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="Why Realtors">
-                    <i class="icon icon-question-circle icon-fw icon-lg"></i> <span class="dt-side-nav__text">Why Realtors</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=buyer-agent" class="dt-side-nav__link" title="Why Buyer Agent">
-                            <i class="icon icon-customer icon-fw icon-lg"></i> <span class="dt-side-nav__text">Why Buyer Agent</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=how-to-find" class="dt-side-nav__link" title="How to find">
-                            <i class="icon icon-findwhat icon-fw icon-lg"></i> <span class="dt-side-nav__text">How to find</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="page-blank.html?menu=realtors-news" class="dt-side-nav__link" title="Realtors News">
-                    <i class="icon icon-news icon-fw icon-lg"></i> <span class="dt-side-nav__text">Realtors News</span>
-                </a>
-            </li>
-            <!-- /menu item -->
-            <!-- Menu Header -->
-            <li class="dt-side-nav__item dt-side-nav__header">
-                <span class="dt-side-nav__text">Mortgage</span>
-            </li>
-            <!-- /menu header -->
-            <!-- Menu Item -->
-            <li class="dt-side-nav__item">
-                <a href="page-blank.html?menu=pre-approved" class="dt-side-nav__link" title="Get Pre-Approved">
-                    <i class="icon icon-circle-check-o icon-fw icon-lg"></i>
-                    <span class="dt-side-nav__text">Get Pre-Approved</span>
-                </a>
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="javascript:void(0)" class="dt-side-nav__link dt-side-nav__arrow" title="Rates">
-                    <i class="icon icon-question icon-fw icon-lg"></i> <span class="dt-side-nav__text">Rates</span>
-                </a>
-
-                <!-- Sub-menu -->
-                <ul class="dt-side-nav__sub-menu">
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=mortgagerate" class="dt-side-nav__link" title="Mortgage Rates">
-                            <i class="icon icon-mortgagerate icon-fw icon-lg"></i>
-                            <span class="dt-side-nav__text">Mortgage Rates</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=finance-rates" class="dt-side-nav__link" title="Finance Rates">
-                            <i class="icon icon-financerate icon-fw icon-lg"></i> <span class="dt-side-nav__text">Finance Rates</span>
-                        </a>
-                    </li>
-
-                    <li class="dt-side-nav__item">
-                        <a href="page-blank.html?menu=refinance-rates" class="dt-side-nav__link" title="Refinance Rates">
-                            <i class="icon icon-refinancerates icon-fw icon-lg"></i>
-                            <span class="dt-side-nav__text">Refinance Rates</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- /sub-menu -->
-            </li>
-            <li class="dt-side-nav__item">
-                <a href="page-blank.html?menu=home-equity" class="dt-side-nav__link" title="Home Equity">
-                    <i class="icon icon-homeequity icon-fw icon-lg"></i> <span class="dt-side-nav__text">Home Equity</span>
-                </a>
-            </li>
-            <!-- /menu item -->
+          
         </ul>
         <!-- /sidebar navigation -->
 
