--- a/LimenawebApp/Views/Home/Index.cshtml
+++ b/LimenawebApp/Views/Home/Index.cshtml
@@ -2,6 +2,112 @@
     ViewBag.Title = "Distribuidora Limeña - Líderes en productos latinos";
 }
 
+
+
+
+@*<div id="carouselCaptions" class="carousel slide" data-ride="carousel" style="padding-top:70px;">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselCaptions" data-slide-to="2"></li>
+        <li data-target="#carouselCaptions" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="media media-2x1 gd-primary">
+                <div class="media-content" style="background-image:url()">
+                    <video autoplay muted loop id="bgvid">
+                        <source src="~/Content/videos/IGNITE_compress.mp4" type="video/mp4">
+                    </video>
+                </div>
+
+            </div>
+            <div class="carousel-caption text-align-auto d-none d-md-block">
+                <div class="row">
+                    <div class="col-8 col-sm-6 my-md-4">
+                        <span class="badge badge-outline">FEATURED</span>
+                        @*<h2 class="text-white display-4 font-weight-500 my-4">The world’s most popular framework </h2>
+                            <p class="text-fade d-none d-md-block">For building responsive, mobile-first sites, with BootstrapCDN and a template starter page.</p>
+                    </div>
+                    <div class="col-4 col-sm-6 d-flex justify-content-center">
+                        <a href="#" class="align-self-center btn btn-lg btn-raised btn-icon btn-rounded bg-white text-dark">
+                                <i data-feather="play"></i>
+                            </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="media media-2x1 gd-dark">
+                <div class="media-content" style="background-image:url('/Content/videos/LUGAR.jpg')"></div>
+            </div>
+            <div class="carousel-caption text-align-auto d-none d-md-block">
+                <div class="row">
+                    <div class="col-8 col-sm-6 my-md-4">
+                        <span class="badge badge-outline">JQUERY</span>
+                            <h2 class="text-white display-4 font-weight-500 my-4">Powerful plugins built on jQuery</h2>
+                            <p class="text-fade d-none d-md-block">Quickly prototype your ideas or build your entire app with prebuilt components.</p>
+                    </div>
+                    <div class="col-4 col-sm-6 d-flex justify-content-center">
+                        <a href="#" class="align-self-center btn btn-lg btn-raised btn-icon btn-rounded bg-white text-dark">
+                                <i data-feather="play"></i>
+                            </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="media media-2x1 gd-info">
+                <div class="media-content" style="background-image:url()">
+                    <video autoplay muted loop id="bgvid2">
+                        <source src="~/Content/videos/PLATINO FINAL COMPRESS.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="carousel-caption text-align-auto d-none d-md-block">
+                <div class="row">
+                    <div class="col-8 col-sm-6 my-md-4">
+                        <span class="badge badge-outline">POPULAR</span>
+                            <h2 class="text-white display-4 font-weight-500 my-4">Popular front-end library.</h2
+                            <p class="text-fade d-none d-md-block">Quickly prototype your ideas or build your entire app with prebuilt components.</p>
+                    </div>
+                    <div class="col-4 col-sm-6 d-flex justify-content-center">
+                        <a href="#" class="align-self-center btn btn-lg btn-raised btn-icon btn-rounded bg-white text-dark">
+                                <i data-feather="play"></i>
+                            </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+<div class="carousel-item">
+    <div class="media media-2x1 gd-dark">
+        <div class="media-content" style="background-image:url('/Content/videos/gold.jpg')"></div>
+    </div>
+    <div class="carousel-caption text-align-auto d-none d-md-block">
+        <div class="row">
+            <div class="col-8 col-sm-6 my-md-4">
+                @*<span class="badge badge-outline">JQUERY</span>
+                    <h2 class="text-white display-4 font-weight-500 my-4">Powerful plugins built on jQuery</h2>
+                    <p class="text-fade d-none d-md-block">Quickly prototype your ideas or build your entire app with prebuilt components.</p>
+            </div>
+            <div class="col-4 col-sm-6 d-flex justify-content-center">
+                <a href="#" class="align-self-center btn btn-lg btn-raised btn-icon btn-rounded bg-white text-dark">
+                        <i data-feather="play"></i>
+                    </a>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
+<a class="carousel-control-prev" href="#carouselCaptions" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselCaptions" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
+</div>*@
 <div class="herob">
     <div class="hero-content">
         <h1 class="hero-h1">La distribuidora líder en productos latinos</h1>
