--- a/LimenawebApp/Views/Main/Dashboard_Inventory.cshtml
+++ b/LimenawebApp/Views/Main/Dashboard_Inventory.cshtml
@@ -45,6 +45,167 @@
                                 <h1 class="dt-page__title">Dashboard</h1>
                             </div>
                             <!-- /page header -->
+                            <!-- Grid Item -->
+                            <div class="col-xl-7 order-xl-3">
+
+                                <!-- Card -->
+                                <div class="dt-card">
+
+                                    <!-- Card Header -->
+                                    <div class="dt-card__header mb-4">
+
+                                        <!-- Card Heading -->
+                                        <div class="dt-card__heading">
+                                            <h3 class="dt-card__title">Projects</h3>
+                                        </div>
+                                        <!-- /card heading -->
+                                        <!-- Card Tools -->
+                                        <div class="dt-card__tools">
+                                            <a href="javascript:void(0)" class="dt-card__more">See All</a>
+                                        </div>
+                                        <!-- /card tools -->
+
+                                    </div>
+                                    <!-- /card header -->
+                                    <!-- Card Body -->
+                                    <div class="dt-card__body p-0 max-h-350 ps-custom-scrollbar">
+
+                                        <!-- Widget-->
+                                        <div class="dt-widget dt-widget-xl dt-widget-separator dt-widget-hover">
+                                            <!-- Widget Item -->
+                                            <div class="dt-widget__item">
+
+                                                <!-- Widget Image -->
+                                                <div class="dt-widget__img">
+                                                    <!-- Avatar -->
+                                                    <i class="icon icon-chatbull text-indigo icon-3x"></i>
+                                                    <!-- /avatar -->
+                                                </div>
+                                                <!-- /widget image -->
+                                                <!-- Shape -->
+                                                <div class="dot-shape dot-shape-lg bg-success mx-5"></div>
+                                                <!-- /shape -->
+                                                <!-- Widget Info -->
+                                                <div class="dt-widget__info align-text-top">
+                                                    <a class="dt-widget__title" href="javascript:void(0)">ChatBull minor bug fixes</a>
+                                                    <div class="dt-indicator-item__info" data-fill="55" data-max="100"
+                                                         data-percent="true"
+                                                         style="width: 120px">
+                                                        <div class="dt-indicator-item__bar">
+                                                            <div class="dt-indicator-item__fill bg-success"></div>
+                                                        </div>
+                                                        <span class="dt-indicator-item__count ml-3">0</span>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget info -->
+                                                <!-- Widget Extra -->
+                                                <div class="dt-widget__extra">
+                                                    <div class="dt-task">
+                                                        <div class="dt-task__number">20 Tasks</div>
+                                                        <a class="dt-task__redirect" href="javascript:void(0)">
+                                                            <i class="icon icon-open-new-tab"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget extra -->
+
+                                            </div>
+                                            <!-- /widget item -->
+                                            <!-- Widget Item -->
+                                            <div class="dt-widget__item">
+
+                                                <!-- Widget Image -->
+                                                <div class="dt-widget__img">
+                                                    <!-- Avatar -->
+                                                    <i class="icon icon-projects text-orange icon-3x"></i>
+                                                    <!-- /avatar -->
+                                                </div>
+                                                <!-- /widget image -->
+                                                <!-- Shape -->
+                                                <div class="dot-shape dot-shape-lg bg-light mx-5"></div>
+                                                <!-- /shape -->
+                                                <!-- Widget Info -->
+                                                <div class="dt-widget__info align-text-top">
+                                                    <a class="dt-widget__title" href="javascript:void(0)">Wireframe of new project</a>
+                                                    <div class="dt-indicator-item__info" data-fill="0" data-max="100"
+                                                         data-percent="true"
+                                                         style="width: 120px">
+                                                        <div class="dt-indicator-item__bar">
+                                                            <div class="dt-indicator-item__fill bg-success"></div>
+                                                        </div>
+                                                        <span class="dt-indicator-item__count ml-3">0</span>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget info -->
+                                                <!-- Widget Extra -->
+                                                <div class="dt-widget__extra">
+                                                    <div class="dt-task">
+                                                        <div class="dt-task__number">0 Tasks</div>
+                                                        <a class="dt-task__redirect" href="javascript:void(0)">
+                                                            <i class="icon icon-open-new-tab"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget extra -->
+
+                                            </div>
+                                            <!-- /widget item -->
+
+                                            <!-- Widget Item -->
+                                            <div class="dt-widget__item">
+
+                                                <!-- Widget Image -->
+                                                <div class="dt-widget__img">
+                                                    <!-- Avatar -->
+                                                    <i class="icon icon-revenue-new text-yellow icon-3x"></i>
+                                                    <!-- /avatar -->
+                                                </div>
+                                                <!-- /widget image -->
+                                                <!-- Shape -->
+                                                <div class="dot-shape dot-shape-lg bg-info mx-5"></div>
+                                                <!-- /shape -->
+                                                <!-- Widget Info -->
+                                                <div class="dt-widget__info align-text-top">
+                                                    <a class="dt-widget__title" href="javascript:void(0)">
+                                                        HR Management
+                                                        System
+                                                    </a>
+                                                    <div class="dt-indicator-item__info" data-fill="60" data-max="80"
+                                                         data-percent="true"
+                                                         style="width: 120px">
+                                                        <div class="dt-indicator-item__bar">
+                                                            <div class="dt-indicator-item__fill bg-info"></div>
+                                                        </div>
+                                                        <span class="dt-indicator-item__count ml-3">0</span>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget info -->
+                                                <!-- Widget Extra -->
+                                                <div class="dt-widget__extra">
+                                                    <div class="dt-task">
+                                                        <div class="dt-task__number">117 Tasks</div>
+                                                        <a class="dt-task__redirect" href="javascript:void(0)">
+                                                            <i class="icon icon-open-new-tab"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                                <!-- /widget extra -->
+
+                                            </div>
+                                            <!-- /widget item -->
+
+                                          
+                                        </div>
+                                        <!-- /widget-->
+
+                                    </div>
+                                    <!-- /card body -->
+
+                                </div>
+                                <!-- /card -->
+
+                            </div>
+                            <!-- /grid item -->
 
 
                         </div>
