--- a/LimenawebApp/Views/Shared/Scripts_main.cshtml
+++ b/LimenawebApp/Views/Shared/Scripts_main.cshtml
@@ -297,6 +297,23 @@ else
                 }
             });
         }
+        if (element == "Inventory") {
+            //document.getElementById("home_menuInventory").style.display = "block";
+            document.getElementById("inventory_menu").style.display = "block";
+
+            roles.forEach(function (elementrol) {
+                if (elementrol == "Admin") {
+                    document.getElementById("stock_submenu").style.display = "block";
+                }
+                if (elementrol == "Supervisor") {
+                    document.getElementById("stock_submenu").style.display = "block";
+                }
+                if (elementrol == "Picker") {
+                    document.getElementById("stock_submenu").style.display = "block";
+
+                }
+            });
+        }
         if (element == "Management") {
             document.getElementById("manag_menu").style.display = "block";
             document.getElementById("dsd_menu").style.display = "block";
@@ -318,7 +335,7 @@ else
             document.getElementById("drop1").style.display = "block";
             document.getElementById("reportop1_submenu").style.display = "block";
             document.getElementById("tasks_submenu").style.display = "block";
-
+            document.getElementById("home_menuInventory").style.display = "block";
         }
         if (element == "Customer") {
             document.getElementById("home_menuCustomers").style.display = "block";
