--- a/LimenawebApp/Views/Shared/Style_landingpage.cshtml
+++ b/LimenawebApp/Views/Shared/Style_landingpage.cshtml
@@ -13,6 +13,8 @@
 <link href="~/Content/landingpage/css/dlimena.webflow.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="~/Content/appcontent/assets/vendor/calendarrangepicker/css/daterangepicker.css" />
 <link rel="stylesheet" href="~/Content/login/css/stylespinner.css">
+<!--bootstrap styles-->
+<link href="~/Content/appcontent/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!--select2-->
 <link href="~/Content/appcontent/assets/vendor/select2/css/select2.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
